fix: edit style scrollbar confidentiality

--- a/src/styles/blocks/confidentiality.scss
+++ b/src/styles/blocks/confidentiality.scss
@@ -5,7 +5,6 @@
   background: url(../assets/img/bg_popup.png) no-repeat center;
   background-size: cover;
 
-
   &.active {
     position: fixed;
     top: 0;
@@ -26,38 +25,95 @@
     height: 100vh;
   }
 
-  &__content {
+  &__wrap {
     width: 100%;
-    overflow-y: auto;
     max-width: 840px;
-    font-size: 18px;
-    color: $black-color-text;
-    line-height: 22px;
-    padding: 70px 50px;
     background: rgb(255, 255, 255);
     border-radius: 5px;
     margin-bottom: 30px;
+    overflow: hidden;
   }
 
-  @media (max-width: 1919.98px) {}
+  &__content {
+    font-size: 18px;
+    color: $black-color-text;
+    line-height: 22px;
+    padding: 60px 40px;
+    height: 100%;
+    overflow-y: auto;
+    margin-right: 10px;
+  }
 
-  @media (max-width: 1439.98px) {}
+  .layout-scrollbar {
+    overscroll-behavior: contain;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(206, 4, 118) transparent;
+  }
+  .layout-scrollbar::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+  }
+  .layout-scrollbar::-webkit-scrollbar-track {
+    background-color: rgba(206, 4, 118, 0.2);
+  }
+  .layout-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(206, 4, 118);
+    border-radius: 3px;
+    box-shadow: 0 0 5px 2px rgba(206, 4, 118, 0.3);
+  }
+  .layout-scrollbar::-webkit-scrollbar-button {
+    background-color: transparent;
+    border-radius: 3px;
+  }
+  .layout-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(172, 1, 98);
+  }
+  .layout-scrollbar::-webkit-scrollbar-thumb:active {
+    background-color: rgb(172, 1, 98);
+  }
+  .layout-scrollbar::-webkit-scrollbar-thumb:vertical {
+    min-height: 100px;
+  }
+  .layout-scrollbar::-webkit-scrollbar-thumb:horizontal {
+    min-width: 100px;
+  }
+
+  @media (max-width: 1919.98px) {
+  }
+
+  @media (max-width: 1439.98px) {
+  }
 
   @media (max-width: 1023.98px) {
     &__content {
-      padding: 55px 40px;
+      padding: 45px 30px;
     }
   }
 
   @media (max-width: 767.98px) {
+    &__wrap {
+      margin-bottom: 20px;
+    }
+
     &__content {
-      padding: 30px;
+      padding: 20px;
+      margin-right: 5px;
+    }
+
+    .layout-scrollbar::-webkit-scrollbar-thumb {
+      box-shadow: 0 0 5px 1px rgba(206, 4, 118, 0.3);
     }
   }
 
   @media (max-width: 374.98px) {
+    &__wrap {
+      margin-bottom: 10px;
+    }
+
     &__content {
-      padding: 20px;
+      padding: 10px;
     }
   }
 }
